--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
-
+<!DOCTYPE>
 <html>
-  
   <head>
     <title>Billiards</title>
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
